commons-configuration 1.10 pom.xml

--- a/hpms-server/pom.xml
+++ b/hpms-server/pom.xml
@@ -54,10 +54,11 @@
   			<version>0.11.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
 		<dependency>
-			<groupId>commons-configuration</groupId>
-			<artifactId>commons-configuration</artifactId>
-			<version>1.10</version>
+		    <groupId>org.bouncycastle</groupId>
+		    <artifactId>bcprov-jdk15on</artifactId>
+		    <version>1.64</version>
 		</dependency>
 		
 		<dependency>
@@ -81,6 +82,13 @@
 		    <version>42.1.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
+		<dependency>
+		    <groupId>commons-configuration</groupId>
+		    <artifactId>commons-configuration</artifactId>
+		    <version>1.10</version>
+		</dependency>
+		
 		
   </dependencies>
   
